# sonorus

./: Cargo.toml  changes.son  flake.nix
nix/: default.nix  overlays.nix  shell.nix
src/: error.rs  lexer.rs  main.rs  parser.rs  utils.rs
src/lexer/: error.rs  lut.rs  tests.rs
src/parser/: error.rs  lexer.rs  lut.rs
src/utils/: loc.rs  span.rs
